--- a/serenity.properties
+++ b/serenity.properties
@@ -3,8 +3,8 @@ serenity.test.root =  "com.bdd.automation.features"
 #serenity.outputDirectory = target/site/reports
 
 #Jira Integration
-jira.url=https://landmark.atlassian.net
-#jira.project=SVOI
-#jira.username=venkataramana.anugolu@landmarkgroup.in
+#jira.url=
+#jira.project=
+#jira.username=
 #jira.password=
-#serenity.public.url=http://buildserver.myorg.com/latest/serenity/report
+#serenity.public.url=
